# pythonbot

./: .gitignore  LICENSE  README.md  _test_runnertest_suite.py  api.py  buglist.txt  db.json  main.py  pp_calc.py  pyproject.toml  requirements.txt  runtime.txt  server.py  utils.py
.github/: FUNDING.yml
api/: api.py  requirements.txt  utils.py
cogs/: bot.py  debug.py  dscommands.py  economy.py  economy2.py  error.py  fun.py  image.py  member.py  moderation.py  mycommands.py  nonsense.py  social.py  text.py  utility.py
templates/: index.html
