[tool.poetry]
name = "pythonbotlol"
version = "3.70.21"
description = "Multi-purpose discord bot by Number1#4325"
authors = ["Number1"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.2.4"
Flask = "^2.0.2"
app = "^0.0.1"
disnake = "^2.3.0"
Js2Py = "^0.71"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
